generator client {
  provider = "prisma-client-js"
  output   = "../../node_modules/.prisma/client"
}

datasource db {
  provider = "postgresql"
}

enum RoleName {
  INSTITUTION_ADMIN
  TEACHER
  STUDENT
  PARENT
}

model Role {
  id        String   @id @default(cuid())
  name      RoleName @unique
  users     User[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model User {
  id                     String                  @id @default(cuid())
  email                  String                  @unique
  passwordHash           String
  firstName              String
  lastName               String
  avatarUrl              String?
  isActive               Boolean                 @default(true)
  roleId                 String
  role                   Role                    @relation(fields: [roleId], references: [id], onDelete: Restrict)
  createdAt              DateTime                @default(now())
  updatedAt              DateTime                @updatedAt
  refreshTokens          RefreshToken[]
  passwordResetTokens    PasswordResetToken[]
  institutionMembers     InstitutionMember[]
  coursesAuthored        Course[]                @relation("CourseAuthor")
  enrollments            Enrollment[]            @relation("StudentEnrollments")
  submissions            AssignmentSubmission[]  @relation("StudentSubmissions")
  testAttempts           TestAttempt[]           @relation("StudentAttempts")
  gamificationProfile    GamificationProfile?
  xpTransactions         XPTransaction[]
  achievements           StudentAchievement[]
  todos                  Todo[]
  tournamentsCreated     Tournament[]            @relation("TournamentCreator")
  participations         TournamentParticipant[]
  tournamentResults      TournamentResult[]      @relation("TournamentResultUser")
  childLinks             ParentStudent[]         @relation("ParentLinks")
  parentLinks            ParentStudent[]         @relation("StudentLinks")
  goalsAsParent          ParentGoal[]            @relation("ParentGoals")
  goalsAsStudent         ParentGoal[]            @relation("StudentGoals")
  chatParticipants       ChatParticipant[]
  notifications          Notification[]
  notificationPreference NotificationPreference?
  subscriptions          Subscription[]
  coursePurchases        CoursePurchase[]
  teacherCommissions     CommissionTransaction[] @relation("TeacherCommissions")
  sentMessages           Message[]               @relation("SentMessages")
  receivedMessages       Message[]               @relation("ReceivedMessages")

  @@index([roleId])
}

model RefreshToken {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
}

model PasswordResetToken {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
}

// ─── Sprint 3: Institution Module ───────────────────────────────────────────

model Institution {
  id          String              @id @default(cuid())
  name        String
  slug        String              @unique
  description String?
  address     String?
  phone       String?
  email       String?
  website     String?
  logoUrl     String?
  isActive    Boolean             @default(true)
  departments Department[]
  memberships InstitutionMember[]
  createdAt   DateTime            @default(now())
  updatedAt   DateTime            @updatedAt
}

model Department {
  id            String      @id @default(cuid())
  name          String
  institutionId String
  institution   Institution @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  classes       Class[]
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  @@index([institutionId])
}

model Class {
  id           String              @id @default(cuid())
  name         String
  year         Int
  departmentId String
  department   Department          @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  memberships  InstitutionMember[]
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt

  @@index([departmentId])
}

enum InstitutionRole {
  ADMIN
  TEACHER
  STUDENT
  PARENT
}

model InstitutionMember {
  id            String          @id @default(cuid())
  userId        String
  user          User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  institutionId String
  institution   Institution     @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  classId       String?
  class         Class?          @relation(fields: [classId], references: [id], onDelete: SetNull)
  role          InstitutionRole
  joinedAt      DateTime        @default(now())

  @@unique([userId, institutionId])
  @@index([institutionId])
  @@index([userId])
}

// ─── Sprint 4: Teacher / Course Module ───────────────────────────────────────

enum CourseStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

enum LessonType {
  VIDEO
  TEXT
  QUIZ
  ASSIGNMENT
}

enum QuestionType {
  SINGLE
  MULTIPLE
  TEXT
}

model Course {
  id            String                  @id @default(cuid())
  title         String
  description   String?
  coverUrl      String?
  status        CourseStatus            @default(DRAFT)
  isPaid        Boolean                 @default(false)
  priceCents    Int                     @default(0)
  currency      String                  @default("USD")
  authorId      String
  author        User                    @relation("CourseAuthor", fields: [authorId], references: [id], onDelete: Restrict)
  institutionId String?
  modules       CourseModule[]
  enrollments   Enrollment[]
  purchases     CoursePurchase[]
  commissions   CommissionTransaction[]
  todos         Todo[]
  createdAt     DateTime                @default(now())
  updatedAt     DateTime                @updatedAt

  @@index([authorId])
  @@index([institutionId])
}

model CourseModule {
  id        String   @id @default(cuid())
  title     String
  order     Int      @default(0)
  courseId  String
  course    Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)
  lessons   Lesson[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([courseId])
}

model Lesson {
  id         String           @id @default(cuid())
  title      String
  type       LessonType       @default(TEXT)
  content    String?
  videoUrl   String?
  order      Int              @default(0)
  moduleId   String
  module     CourseModule     @relation(fields: [moduleId], references: [id], onDelete: Cascade)
  test       Test?
  assignment Assignment?
  progress   LessonProgress[]
  createdAt  DateTime         @default(now())
  updatedAt  DateTime         @updatedAt

  @@index([moduleId])
}

model Test {
  id           String        @id @default(cuid())
  title        String
  timeLimit    Int?
  passingScore Int           @default(70)
  lessonId     String        @unique
  lesson       Lesson        @relation(fields: [lessonId], references: [id], onDelete: Cascade)
  questions    Question[]
  attempts     TestAttempt[]
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
}

model Question {
  id      String           @id @default(cuid())
  text    String
  type    QuestionType     @default(SINGLE)
  order   Int              @default(0)
  points  Int              @default(1)
  testId  String
  test    Test             @relation(fields: [testId], references: [id], onDelete: Cascade)
  options QuestionOption[]

  @@index([testId])
}

model QuestionOption {
  id         String   @id @default(cuid())
  text       String
  isCorrect  Boolean  @default(false)
  questionId String
  question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

  @@index([questionId])
}

model Assignment {
  id          String                 @id @default(cuid())
  title       String
  description String?
  maxScore    Int                    @default(100)
  dueDate     DateTime?
  lessonId    String                 @unique
  lesson      Lesson                 @relation(fields: [lessonId], references: [id], onDelete: Cascade)
  submissions AssignmentSubmission[]
  todos       Todo[]
  createdAt   DateTime               @default(now())
  updatedAt   DateTime               @updatedAt
}

model AssignmentSubmission {
  id           String     @id @default(cuid())
  fileUrl      String?
  textContent  String?
  score        Int?
  feedback     String?
  studentId    String
  student      User       @relation("StudentSubmissions", fields: [studentId], references: [id], onDelete: Cascade)
  assignmentId String
  assignment   Assignment @relation(fields: [assignmentId], references: [id], onDelete: Cascade)
  submittedAt  DateTime   @default(now())
  gradedAt     DateTime?

  @@unique([studentId, assignmentId])
  @@index([assignmentId])
}

model TestAttempt {
  id          String   @id @default(cuid())
  score       Int
  passed      Boolean
  answers     Json
  studentId   String
  student     User     @relation("StudentAttempts", fields: [studentId], references: [id], onDelete: Cascade)
  testId      String
  test        Test     @relation(fields: [testId], references: [id], onDelete: Cascade)
  completedAt DateTime @default(now())

  @@index([studentId])
  @@index([testId])
}

// ─── Sprint 5: Enrollment & Progress (placeholder models) ────────────────────

model Enrollment {
  id         String           @id @default(cuid())
  studentId  String
  student    User             @relation("StudentEnrollments", fields: [studentId], references: [id], onDelete: Cascade)
  courseId   String
  course     Course           @relation(fields: [courseId], references: [id], onDelete: Cascade)
  enrolledAt DateTime         @default(now())
  progress   LessonProgress[]

  @@unique([studentId, courseId])
  @@index([courseId])
}

model LessonProgress {
  id           String     @id @default(cuid())
  completed    Boolean    @default(false)
  completedAt  DateTime?
  enrollmentId String
  enrollment   Enrollment @relation(fields: [enrollmentId], references: [id], onDelete: Cascade)
  lessonId     String
  lesson       Lesson     @relation(fields: [lessonId], references: [id], onDelete: Cascade)

  @@unique([enrollmentId, lessonId])
  @@index([enrollmentId])
}

enum XPSource {
  LESSON_COMPLETED
  TEST_PASSED
  ASSIGNMENT_GRADED
  ACHIEVEMENT_UNLOCKED
  DAILY_STREAK
}

enum TodoStatus {
  TODO
  IN_PROGRESS
  REVIEW
  DONE
}

enum TodoPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

model Todo {
  id           String       @id @default(cuid())
  title        String
  description  String?
  status       TodoStatus   @default(TODO)
  priority     TodoPriority @default(MEDIUM)
  position     Int          @default(0)
  dueDate      DateTime?
  userId       String
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId     String?
  course       Course?      @relation(fields: [courseId], references: [id], onDelete: SetNull)
  assignmentId String?
  assignment   Assignment?  @relation(fields: [assignmentId], references: [id], onDelete: SetNull)
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt

  @@index([userId])
  @@index([status])
  @@index([dueDate])
}

enum AchievementCategory {
  LEARNING
  STREAK
  TESTS
  SOCIAL
}

model GamificationProfile {
  id        String   @id @default(cuid())
  userId    String   @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  xp        Int      @default(0)
  level     Int      @default(1)
  streak    Int      @default(0)
  updatedAt DateTime @updatedAt
}

model XPTransaction {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  amount    Int
  source    XPSource
  meta      Json?
  createdAt DateTime @default(now())

  @@index([userId])
}

model Achievement {
  id          String               @id @default(cuid())
  code        String               @unique
  title       String
  description String
  icon        String?
  category    AchievementCategory  @default(LEARNING)
  xpReward    Int                  @default(0)
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt
  unlocks     StudentAchievement[]
}

model StudentAchievement {
  id            String      @id @default(cuid())
  userId        String
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  achievementId String
  achievement   Achievement @relation(fields: [achievementId], references: [id], onDelete: Cascade)
  unlockedAt    DateTime    @default(now())

  @@unique([userId, achievementId])
  @@index([userId])
}

// ─── Sprint 7: Tournaments & Real-Time ───────────────────────────────────────

enum TournamentStatus {
  UPCOMING
  ACTIVE
  FINISHED
}

model Tournament {
  id           String                  @id @default(cuid())
  title        String
  description  String?
  status       TournamentStatus        @default(UPCOMING)
  startsAt     DateTime
  endsAt       DateTime
  maxScore     Int                     @default(100)
  createdById  String
  createdBy    User                    @relation("TournamentCreator", fields: [createdById], references: [id], onDelete: Restrict)
  participants TournamentParticipant[]
  results      TournamentResult[]
  createdAt    DateTime                @default(now())
  updatedAt    DateTime                @updatedAt

  @@index([status])
  @@index([createdById])
}

model TournamentParticipant {
  id           String     @id @default(cuid())
  tournamentId String
  tournament   Tournament @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  userId       String
  user         User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  joinedAt     DateTime   @default(now())

  @@unique([tournamentId, userId])
  @@index([tournamentId])
  @@index([userId])
}

model TournamentResult {
  id           String     @id @default(cuid())
  tournamentId String
  tournament   Tournament @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  userId       String
  user         User       @relation("TournamentResultUser", fields: [userId], references: [id], onDelete: Cascade)
  score        Int        @default(0)
  rank         Int?
  submittedAt  DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@unique([tournamentId, userId])
  @@index([tournamentId])
  @@index([userId])
}

// ─── Sprint 8: Parent Module ──────────────────────────────────────────────────

model ParentStudent {
  id        String   @id @default(cuid())
  parentId  String
  parent    User     @relation("ParentLinks", fields: [parentId], references: [id], onDelete: Cascade)
  studentId String
  student   User     @relation("StudentLinks", fields: [studentId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@unique([parentId, studentId])
  @@index([parentId])
  @@index([studentId])
}

model ParentGoal {
  id          String    @id @default(cuid())
  title       String
  description String?
  targetXp    Int       @default(100)
  reward      String?
  achieved    Boolean   @default(false)
  achievedAt  DateTime?
  parentId    String
  parent      User      @relation("ParentGoals", fields: [parentId], references: [id], onDelete: Cascade)
  studentId   String
  student     User      @relation("StudentGoals", fields: [studentId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@index([parentId])
  @@index([studentId])
}

enum ChatType {
  DIRECT
  GROUP
}

model Chat {
  id           String            @id @default(cuid())
  title        String?
  type         ChatType          @default(DIRECT)
  participants ChatParticipant[]
  messages     Message[]
  createdAt    DateTime          @default(now())
  updatedAt    DateTime          @updatedAt
}

model ChatParticipant {
  id         String    @id @default(cuid())
  chatId     String
  chat       Chat      @relation(fields: [chatId], references: [id], onDelete: Cascade)
  userId     String
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  joinedAt   DateTime  @default(now())
  lastReadAt DateTime?

  @@unique([chatId, userId])
  @@index([chatId])
  @@index([userId])
}

model Message {
  id            String    @id @default(cuid())
  content       String
  attachmentUrl String?
  chatId        String?
  chat          Chat?     @relation(fields: [chatId], references: [id], onDelete: Cascade)
  senderId      String
  sender        User      @relation("SentMessages", fields: [senderId], references: [id], onDelete: Cascade)
  receiverId    String
  receiver      User      @relation("ReceivedMessages", fields: [receiverId], references: [id], onDelete: Cascade)
  readAt        DateTime?
  createdAt     DateTime  @default(now())

  @@index([chatId])
  @@index([senderId])
  @@index([receiverId])
  @@index([senderId, receiverId])
}

enum NotificationType {
  CHAT_MESSAGE
  ASSIGNMENT
  TOURNAMENT
  SYSTEM
}

model Notification {
  id          String           @id @default(cuid())
  userId      String
  user        User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  type        NotificationType @default(SYSTEM)
  title       String
  body        String
  link        String?
  isRead      Boolean          @default(false)
  deliveredAt DateTime?
  createdAt   DateTime         @default(now())

  @@index([userId])
  @@index([isRead])
  @@index([createdAt])
}

model NotificationPreference {
  id            String   @id @default(cuid())
  userId        String   @unique
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  inAppEnabled  Boolean  @default(true)
  emailEnabled  Boolean  @default(false)
  pushEnabled   Boolean  @default(false)
  chatEnabled   Boolean  @default(true)
  courseEnabled Boolean  @default(true)
  systemEnabled Boolean  @default(true)
  updatedAt     DateTime @updatedAt
}

enum BillingInterval {
  MONTHLY
  YEARLY
  ONE_TIME
}

enum SubscriptionStatus {
  ACTIVE
  CANCELED
  PAST_DUE
  TRIALING
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
}

enum CommissionStatus {
  PENDING
  PAID
}

model SubscriptionPlan {
  id              String          @id @default(cuid())
  name            String
  description     String?
  priceCents      Int
  currency        String          @default("USD")
  interval        BillingInterval
  stripeProductId String?
  stripePriceId   String?
  isActive        Boolean         @default(true)
  subscriptions   Subscription[]
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt

  @@index([isActive])
}

model Subscription {
  id                   String             @id @default(cuid())
  userId               String
  user                 User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  planId               String
  plan                 SubscriptionPlan   @relation(fields: [planId], references: [id], onDelete: Restrict)
  status               SubscriptionStatus @default(ACTIVE)
  stripeCustomerId     String?
  stripeSubscriptionId String?
  currentPeriodStart   DateTime?
  currentPeriodEnd     DateTime?
  cancelAtPeriodEnd    Boolean            @default(false)
  createdAt            DateTime           @default(now())
  updatedAt            DateTime           @updatedAt

  @@index([userId])
  @@index([planId])
  @@index([status])
}

model CoursePurchase {
  id                      String                 @id @default(cuid())
  userId                  String
  user                    User                   @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId                String
  course                  Course                 @relation(fields: [courseId], references: [id], onDelete: Restrict)
  amountCents             Int
  currency                String                 @default("USD")
  status                  PaymentStatus          @default(PENDING)
  stripeCheckoutSessionId String?
  stripePaymentIntentId   String?
  commission              CommissionTransaction?
  createdAt               DateTime               @default(now())
  updatedAt               DateTime               @updatedAt

  @@unique([userId, courseId])
  @@index([userId])
  @@index([courseId])
  @@index([status])
}

model CommissionTransaction {
  id                 String           @id @default(cuid())
  teacherId          String
  teacher            User             @relation("TeacherCommissions", fields: [teacherId], references: [id], onDelete: Cascade)
  courseId           String
  course             Course           @relation(fields: [courseId], references: [id], onDelete: Cascade)
  purchaseId         String           @unique
  purchase           CoursePurchase   @relation(fields: [purchaseId], references: [id], onDelete: Cascade)
  grossAmountCents   Int
  platformFeeCents   Int
  teacherAmountCents Int
  status             CommissionStatus @default(PENDING)
  paidAt             DateTime?
  createdAt          DateTime         @default(now())

  @@index([teacherId])
  @@index([status])
}
